--- a/Makale_Web/Views/Home/Index.cshtml
+++ b/Makale_Web/Views/Home/Index.cshtml
@@ -72,8 +72,8 @@
                                 <span class="glyphicon glyphicon-time">@DateTime.Now</span><br />
 
                             </h6>
-
-                            <p>Ut fusce varius t integer eu augue augue nunc elit dolor, luctus placerat.</p>
+                           
+                            <p>Laoreet ac, aliquam sit amet justo nunc tempor, metus vel placerat suscipit, orci nisl iaculis eros, a tincidunt nisi odio eget lorem nulla condimentum tempor mattis ut vitae. </p>
                         </div>
                         <hr />
                         <div class="ratings">
