--- a/Makale_Web/Views/Home/Index.cshtml
+++ b/Makale_Web/Views/Home/Index.cshtml
@@ -73,7 +73,7 @@
 
                             </h6>
                            
-                            <p>Laoreet ac, aliquam sit amet justo nunc tempor, metus vel placerat suscipit, orci nisl iaculis eros, a tincidunt nisi odio eget lorem nulla condimentum tempor mattis ut vitae. </p>
+                            <p>Laoreet ac, aliquam sit amet justo nunc tempor, metus vel placerat suscipit, orci nisl iaculis erofgfghs, a tincidunt nisi odio eget lorem nulla condimentum tempor mattis ut vitae. </p>
                         </div>
                         <hr />
                         <div class="ratings">
