--- a/Makale_Web/Content/shop-homepage.css
+++ b/Makale_Web/Content/shop-homepage.css
@@ -22,7 +22,7 @@ body {
 }
 
 .caption {
-    height: 200px;
+    height: 210px;
     overflow: hidden;
 }
 
@@ -63,6 +63,11 @@ body {
     color: #333;
 }
 
-footer {
+.footer {
     margin: 50px 0;
+}
+
+.butonhizalama {
+    right: -30px;
+    
 }
