--- a/Makale_Web/Views/Home/Index.cshtml
+++ b/Makale_Web/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model List<Not>
 @{
     ViewBag.Title = "Index";
 }
@@ -8,13 +8,8 @@
     <div class="row">
 
         <div class="col-md-3">
-            <p class="lead">Kategoriler</p>
-            <div class="list-group">
-                <a href="#" class="list-group-item"><span class="glyphicon glyphicon-menu-hamburger"></span>Tümü</a>
-                <a href="#" class="list-group-item"><span class="glyphicon glyphicon-menu-right"></span>Category 1</a>
-                <a href="#" class="list-group-item"><span class="glyphicon glyphicon-menu-right"></span>Category 2</a>
-                <a href="#" class="list-group-item"><span class="glyphicon glyphicon-menu-right"></span>Category 3</a>
-            </div>
+
+            @Html.Partial("_PartialPageKategoriler")
         </div>
 
         <div class="col-md-9">
@@ -41,7 +36,7 @@
                             <div class="item">
                                 <img class="slide-image" src="~/Images/c0fc6718137400881ab8a02c538cb65e.jpg" alt="">
                             </div>""
-                          
+
                             <div class="item">
                                 <img class="slide-image" src="~/Images/e12ab41303db9c8e133687dacdc43e3d--wallpaper-sky-nature-wallpaper.jpg" alt="">
                             </div>
@@ -59,187 +54,49 @@
 
             <div class="row">
 
-                <div class="col-sm-4 col-lg-4 col-md-4">
-                    <div class="thumbnail">
-                        <img src="http://placehold.it/320x150" alt="">
-                        <div class="caption">
+                @foreach (var item in Model)
+                {
+                    <div class="col-sm-4 col-lg-4 col-md-4">
+                        <div class="thumbnail">
 
-                            <h4>
-                                <a href="#">First Product</a>
-                            </h4>
-                            <h6 class="text-right">
-                                <span class="glyphicon glyphicon-user text-success"></span><b><span style="color:rebeccapurple"> Gökçe Ünlü</span></b><br />
-                                <span class="glyphicon glyphicon-time">@DateTime.Now</span><br />
+                            <img src="~/Images/a5eebe0fbab64f2a0f517bfc58bd1f93.jpg" alt="">
+                            <div class="caption">
+                                <h4>
+                                    <a href="#">@item.Baslik</a>
+                                </h4>
+                                <h6 class="text-right">
+                                    <span class="glyphicon glyphicon-user text-success"></span><b><span style="color:rebeccapurple"> @item.Kullanici.KullaniciAdi</span></b><br />
+                                    <span class="glyphicon glyphicon-time">@item.DegistirmeTarihi.ToString("dd.MM.yy HH:mm")</span><br />
 
-                            </h6>
-                           
-                            <p>Laoreet ac, aliquam sit amet justo nunc tempor, metus vel placerat suscipit, orci nisl iaculis erofgfghs, a tincidunt nisi odio eget lorem nulla condimentum tempor mattis ut vitae. </p>
-                        </div>
-                        <hr />
-                        <div class="ratings">
-                            <p class="pull-right">
-                                <button class="btn btn-default btn-xs"><span class="glyphicon glyphicon-comment"></span>  Yorumlar</button>
-                            </p>
-                            <p>
-                                <button class="btn btn-default btn-xs"> <span class="glyphicon glyphicon-heart text-danger"></span>12</button>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-4 col-lg-4 col-md-4">
-                    <div class="thumbnail">
-                        <img src="http://placehold.it/320x150" alt="">
-                        <div class="caption">
-
-                            <h4>
-                                <a href="#">First Product</a>
-                            </h4>
-                            <h6 class="text-right">
-                                <span class="glyphicon glyphicon-user text-success"></span><b><span style="color:rebeccapurple"> Gökçe Ünlü</span></b><br />
-                                <span class="glyphicon glyphicon-time">@DateTime.Now</span><br />
-
-                            </h6>
-
-                            <p>Ut fusce varius nisl ac ipsum gravida vel pretium tellus tincidunt integer eu augue augue nunc elit dolor, luctus placerat.</p>
-                        </div>
-                        <hr />
-                        <div class="ratings">
-                            <p class="pull-right">
-                                <button class="btn btn-default btn-xs"><span class="glyphicon glyphicon-comment"></span>  Yorumlar</button>
-                            </p>
-                            <p>
-                                <button class="btn btn-default btn-xs"> <span class="glyphicon glyphicon-heart text-danger"></span>12</button>
+                                </h6>
 
 
-                            </p>
+                                @if (!string.IsNullOrEmpty(item.Text) && item.Text.Length > 125)
+                                {
+                                    <p>@item.Text.Substring(0, 125)<a href="#" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-book" style="color:deeppink"></span>Devamı...</a></p>
+
+                                }
+                                else
+                                {
+                                    <p>@item.Text</p>
+                                }
+
+
+
+                            </div>
+                            <hr />
+                            <div class="ratings">
+                                <p class="pull-right">
+                                    <button class="btn btn-default btn-xs"><span class="glyphicon glyphicon-comment"></span>  Yorumlar</button>
+                                </p>
+                                <p>
+                                    <button class="btn btn-default btn-xs"> <span class="glyphicon glyphicon-heart text-danger"></span>@item.BegeniSayisi</button>
+                                </p>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-
-                <div class="col-sm-4 col-lg-4 col-md-4">
-                    <div class="thumbnail">
-                        <img src="http://placehold.it/320x150" alt="">
-                        <div class="caption">
-
-                            <h4>
-                                <a href="#">First Product</a>
-                            </h4>
-                            <h6 class="text-right">
-                                <span class="glyphicon glyphicon-user text-success"></span><b><span style="color:rebeccapurple"> Gökçe Ünlü</span></b><br />
-                                <span class="glyphicon glyphicon-time">@DateTime.Now</span><br />
-
-                            </h6>
-
-                            <p>Ut fusce varius nisl ac ipsum gravida vgfhtfhhfhfhtfdtel pretium tellus tincidunt integer eu augue augue nunc elit dolor, luctus placerat.</p>
-                        </div>
-                        <hr />
-                        <div class="ratings">
-                            <p class="pull-right">
-                                <button class="btn btn-default btn-xs"><span class="glyphicon glyphicon-comment"></span>  Yorumlar</button>
-                            </p>
-                            <p>
-                                <button class="btn btn-default btn-xs"> <span class="glyphicon glyphicon-heart text-danger"></span>12</button>
-
-
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-sm-4 col-lg-4 col-md-4">
-                    <div class="thumbnail">
-                        <img src="http://placehold.it/320x150" alt="">
-                        <div class="caption">
-
-                            <h4>
-                                <a href="#">First Product</a>
-                            </h4>
-                            <h6 class="text-right">
-                                <span class="glyphicon glyphicon-user text-success"></span><b><span style="color:rebeccapurple"> Gökçe Ünlü</span></b><br />
-                                <span class="glyphicon glyphicon-time">@DateTime.Now</span><br />
-
-                            </h6>
-
-                            <p>Ut fusce varius nisl ac ipsum gravida vel pretium tellus tincidunt integer eu augue augue nunc elit dolor, luctus placerat.</p>
-                        </div>
-                        <hr />
-                        <div class="ratings">
-                            <p class="pull-right">
-                                <button class="btn btn-default btn-xs"><span class="glyphicon glyphicon-comment"></span>  Yorumlar</button>
-                            </p>
-                            <p>
-                                <button class="btn btn-default btn-xs"> <span class="glyphicon glyphicon-heart text-danger"></span>12</button>
-
-
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-sm-4 col-lg-4 col-md-4">
-                    <div class="thumbnail">
-                        <img src="http://placehold.it/320x150" alt="">
-                        <div class="caption">
-
-                            <h4>
-                                <a href="#">First Product</a>
-                            </h4>
-                            <h6 class="text-right">
-                                <span class="glyphicon glyphicon-user text-success"></span><b><span style="color:rebeccapurple"> Gökçe Ünlü</span></b><br />
-                                <span class="glyphicon glyphicon-time">@DateTime.Now</span><br />
-
-                            </h6>
-
-                            <p>Ut fusce varius nisl ac ipsum gravida vel pretium tellus tincidunt integer eu augue augue nunc elit dolor, luctus placerat.</p>
-                        </div>
-                        <hr />
-                        <div class="ratings">
-                            <p class="pull-right">
-                                <button class="btn btn-default btn-xs"><span class="glyphicon glyphicon-comment"></span>  Yorumlar</button>
-                            </p>
-                            <p>
-                                <button class="btn btn-default btn-xs"> <span class="glyphicon glyphicon-heart text-danger"></span>12</button>
-
-
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-sm-4 col-lg-4 col-md-4">
-                    <div class="thumbnail">
-                        <img src="http://placehold.it/320x150" alt="">
-                        <div class="caption">
-
-                            <h4>
-                                <a href="#">First Product</a>
-                            </h4>
-                            <h6 class="text-right">
-                                <span class="glyphicon glyphicon-user text-success"></span><b><span style="color:rebeccapurple"> Gökçe Ünlü</span></b><br />
-                                <span class="glyphicon glyphicon-time">@DateTime.Now</span><br />
-
-                            </h6>
-
-                            <p>Ut fusce varius nisl ac ipsum gravida vel pretium tellus tincidunt integer eu augue augue nunc elit dolor, luctus placerat.</p>
-                        </div>
-                        <hr />
-                        <div class="ratings">
-                            <p class="pull-right">
-                                <button class="btn btn-default btn-xs"><span class="glyphicon glyphicon-comment"></span>  Yorumlar</button>
-                            </p>
-                            <p>
-                                <button class="btn btn-default btn-xs"> <span class="glyphicon glyphicon-heart text-danger"></span>12</button>
-
-
-                            </p>
-                        </div>
-                    </div>
-                </div>
+                }
 
 
 
