--- a/Makale_Web/Views/Shared/_Layout.cshtml
+++ b/Makale_Web/Views/Shared/_Layout.cshtml
@@ -37,16 +37,16 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#"><span class="glyphicon glyphicon-wrench"></span> Yönetim</a>
+                        <a href=""><span class="glyphicon glyphicon-wrench"></span> Yönetim</a>
                     </li>
                     <li>
-                        <a href="#"><span class="glyphicon glyphicon-star"></span> En Beğenilenler</a>
+                        <a href="/Home/Begenilenler"><span class="glyphicon glyphicon-star"></span> En Beğenilenler</a>
                     </li>
                     <li>
-                        <a href="#"><span class="glyphicon glyphicon-list"></span> Son Yazılanlar</a>
+                        <a href="/Home/Index"><span class="glyphicon glyphicon-list"></span> Son Yazılanlar</a>
                     </li>
                     <li>
-                        <a href="#"><span class="glyphicon glyphicon-info-sign"></span> Hakkımızda</a>
+                        <a href="/Home/About"><span class="glyphicon glyphicon-info-sign"></span> Hakkımızda</a>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
@@ -62,8 +62,8 @@
     </nav>
 
     <!-- Page Content -->
-    
- 
+
+
     @RenderBody()
 
     <div class="container">
@@ -76,10 +76,10 @@
                     <hr />
                     <p>
 
-                        <a href="#">Hakkımızda</a><br />
-                        <a href="#">İletişim</a><br />
-                        <a href="#">En Beğenilenler</a><br />
-                        <a href="#">Son Yazılanlar</a>
+                        <a href="/Home/About">Hakkımızda</a><br />
+                        <a href="/Home/Begenilenler">Begenilenler</a><br />
+                        <a href="">Yönetim</a><br />
+                        <a href="/Home/Index">Son Yazılanlar</a>
                     </p>
                 </div>
 
