Login ve Kayıt Ol İşlemleri

--- a/Makale_Web/Views/Shared/_Layout.cshtml
+++ b/Makale_Web/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">AnaSayfa</a>
+                <a class="navbar-brand" href="/Home/Index">AnaSayfa</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -50,10 +50,10 @@
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Giriş</a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-user"></span> Üye Ol</a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-user"></span> GökçeÜnlü</a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Çıkış</a></li>
+                    <li><a href="/Home/Login"><span class="glyphicon glyphicon-log-in"></span> Giriş</a></li>
+                    <li><a href="/Home/KayitOl"><span class="glyphicon glyphicon-user"></span> Üye Ol</a></li>
+                    <li><a href="/Home/Profil"><span class="glyphicon glyphicon-user"></span> DuyguKaya</a></li>
+                    <li><a href="/Home/Index"><span class="glyphicon glyphicon-log-out"></span> Çıkış</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -76,10 +76,10 @@
                     <hr />
                     <p>
 
-                        <a href="/Home/About">Hakkımızda</a><br />
-                        <a href="/Home/Begenilenler">Begenilenler</a><br />
-                        <a href="">Yönetim</a><br />
-                        <a href="/Home/Index">Son Yazılanlar</a>
+                        <a href="/Home/About"><span class="glyphicon glyphicon-info-sign"></span> Hakkımızda</a><br />
+                        <a href="/Home/Begenilenler"><span class="glyphicon glyphicon-star"></span> Begenilenler</a><br />
+                        <a href=""><span class="glyphicon glyphicon-wrench"></span> Yönetim</a><br />
+                        <a href="/Home/Index"><span class="glyphicon glyphicon-list"></span> Son Yazılanlar</a>
                     </p>
                 </div>
 
@@ -106,12 +106,7 @@
                 </div>
             </div>
         </footer>
-
-
     </div>
-
-
-
 </body>
 
 </html>
