--- a/Makale_Web/Content/shop-homepage.css
+++ b/Makale_Web/Content/shop-homepage.css
@@ -67,6 +67,12 @@ body {
     margin: 50px 0;
 }
 
+.validation-summary-error {
+    border:2px dotted #808080;
+    background-color:#808080;
+    border-radius:8px;
+}
+
 .butonhizalama {
     right: -30px;
     
