--- a/Makale_Web/Views/Home/KayitBasarili.cshtml
+++ b/Makale_Web/Views/Home/KayitBasarili.cshtml
@@ -1,13 +1,15 @@
 ﻿
 @{
-    ViewBag.Title = "Hesap Aktifleştirme";
+    ViewBag.Title = "KayitBasarili";
 }
 
-<h2>UserActivate</h2>
+<h2>KayitBasarili</h2>
+
+
 <div class="container">
     <div class="text-success">
         <p>
-            Hesabınız aktifleştirildi.
+           Kayıt işlemi gerçekleştirildi. Aktivasyon için mailinizi kontrol ediniz.
         </p>
     </div>
 </div>
