--- a/Makale_Web/Views/Shared/_Layout.cshtml
+++ b/Makale_Web/Views/Shared/_Layout.cshtml
@@ -19,6 +19,14 @@
 </head>
 
 <body>
+    @{
+        Kullanici kullanici = null;
+        if (Session["login"] != null)
+        {
+            kullanici = (Kullanici)Session["login"];
+        }
+
+    }
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -36,9 +44,12 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li>
-                        <a href=""><span class="glyphicon glyphicon-wrench"></span> Yönetim</a>
-                    </li>
+                    @if (kullanici != null && kullanici.Admin)
+                    {
+                        <li>
+                            <a href=""><span class="glyphicon glyphicon-wrench"></span> Yönetim</a>
+                        </li>
+                    }
                     <li>
                         <a href="/Home/Begenilenler"><span class="glyphicon glyphicon-star"></span> En Beğenilenler</a>
                     </li>
@@ -50,10 +61,16 @@
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/Home/Login"><span class="glyphicon glyphicon-log-in"></span> Giriş</a></li>
-                    <li><a href="/Home/KayitOl"><span class="glyphicon glyphicon-user"></span> Üye Ol</a></li>
-                    <li><a href="/Home/Profil"><span class="glyphicon glyphicon-user"></span> DuyguKaya</a></li>
-                    <li><a href="/Home/Index"><span class="glyphicon glyphicon-log-out"></span> Çıkış</a></li>
+                    @if (kullanici == null)
+                    {
+                        <li><a href="/Home/Login"><span class="glyphicon glyphicon-log-in"></span> Giriş</a></li>
+                        <li><a href="/Home/KayitOl"><span class="glyphicon glyphicon-user"></span> Üye Ol</a></li>
+                    }
+                    else
+                    {
+                        <li><a href="/Home/ProfilGoster"><span class="glyphicon glyphicon-user">@kullanici.KullaniciAdi</span></a></li>
+                        <li><a href="/Home/Logout"><span class="glyphicon glyphicon-log-out"></span> Çıkış</a></li>
+                    }
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -75,25 +92,20 @@
                     <h5><b>Site Haritası</b></h5>
                     <hr />
                     <p>
-
                         <a href="/Home/About"><span class="glyphicon glyphicon-info-sign"></span> Hakkımızda</a><br />
                         <a href="/Home/Begenilenler"><span class="glyphicon glyphicon-star"></span> Begenilenler</a><br />
                         <a href=""><span class="glyphicon glyphicon-wrench"></span> Yönetim</a><br />
                         <a href="/Home/Index"><span class="glyphicon glyphicon-list"></span> Son Yazılanlar</a>
                     </p>
                 </div>
-
                 <div class="col-lg-4 text-center">
                     <h5><b>Makale Web Projesi</b></h5>
                     <hr />
                     <p> @DateTime.Now.Year <br /> Tüm hakları saklıdır.. &copy;</p>
                 </div>
-
                 <div class="col-lg-4 text-center">
                     <h5><b>E-Bülten Üyeliği</b></h5>
                     <hr />
-
-
                     <div class="col-md-12">
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="E-posta adresiniz:">
@@ -102,11 +114,9 @@
                             </span>
                         </div>
                     </div>
-
                 </div>
             </div>
         </footer>
     </div>
 </body>
-
 </html>
