--- a/Makale_Web/Content/shop-homepage.css
+++ b/Makale_Web/Content/shop-homepage.css
@@ -26,9 +26,9 @@ body {
     overflow: hidden;
 }
 
-.caption h4 {
-    white-space: nowrap;
-}
+    .caption h4 {
+        white-space: nowrap;
+    }
 
 .thumbnail img {
     width: 100%;
@@ -40,40 +40,51 @@ body {
     color: #d17581;
 }
 
-.ratings button {
-    color:purple;
-}
+    .ratings button {
+        color: purple;
+    }
 
-.ratings button:hover {
-    color:mediumpurple;
-}
+        .ratings button:hover {
+            color: mediumpurple;
+        }
 
 .thumbnail {
-    font-family:'Comic Sans MS';
+    font-family: 'Comic Sans MS';
     padding: 0;
-    background-color:lavender;
-    border-width:10px thick;
-    border-style:dotted;
-    border-color:mediumpurple;
-    
+    background-color: lavender;
+    border-width: 10px thick;
+    border-style: dotted;
+    border-color: mediumpurple;
 }
 
-.thumbnail .caption-full {
-    padding: 9px;
-    color: #333;
-}
+    .thumbnail .caption-full {
+        padding: 9px;
+        color: #333;
+    }
 
 .footer {
     margin: 50px 0;
 }
 
 .validation-summary-error {
-    border:2px dotted #808080;
-    background-color:#808080;
-    border-radius:8px;
+    border: 2px dotted #808080;
+    background-color: #808080;
+    border-radius: 8px;
 }
 
 .butonhizalama {
     right: -30px;
-    
 }
+
+.validation-summary-errors {
+    border: 2px dotted #808080 !important;
+    background-color: #808080;
+    border-radius: 8px;
+    margin-bottom:8px;
+}
+
+    .validation-summary-errors ul {
+        padding: 1px;
+        list-style-type: none;
+        color: #ffffff;
+    }
