--- a/Makale_Web/Views/Home/Index.cshtml
+++ b/Makale_Web/Views/Home/Index.cshtml
@@ -83,16 +83,13 @@
                             </div>
                         </div>
                     </div>
-
                 }
-
-
-
             </div>
-
         </div>
-
     </div>
-
 </div>
 
+@section footer{
+    @Html.Partial("_PartialPageFooter")
+
+    }
