--- a/Makale_Web/Views/Shared/_Layout.cshtml
+++ b/Makale_Web/Views/Shared/_Layout.cshtml
@@ -10,16 +10,16 @@
 
     <title>Web Projesi</title>
 
-
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Content/shop-homepage.css" rel="stylesheet" />
     <script src="~/Scripts/jquery-3.6.1.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
 
 </head>
-
 <body>
+
     @{
+
         Kullanici kullanici = null;
         if (Session["login"] != null)
         {
@@ -27,7 +27,6 @@
         }
 
     }
-
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
@@ -44,10 +43,24 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    @if (kullanici != null && kullanici.Admin)
+                    @if (kullanici != null)
                     {
-                        <li>
-                            <a href=""><span class="glyphicon glyphicon-wrench"></span> Yönetim</a>
+                        @*<a href=""><span class="glyphicon glyphicon-wrench"></span> Yönetim</a>*@
+
+                        <li class="dropdown">
+                            <a href="/Not/Notlar" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-wrench"></span>Yönetim <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/Not/NotEkle">Not Ekle</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a href="/Not/Notlar">Notlarım</a></li>
+                                <li><a href="/Not/Beğendiklerim">Beğendiklerim</a></li>
+                                @if (kullanici.Admin)
+                                {
+                                    <li role="separator" class="divider"></li>
+                                    <li><a href="/Kategori/Create">Kategori Ekle</a></li>
+                                    <li><a href="/Kategori/Kategoriler">Kategoriler</a></li>
+                                }
+                            </ul>
                         </li>
                     }
                     <li>
@@ -73,50 +86,24 @@
                     }
                 </ul>
             </div>
+
             <!-- /.navbar-collapse -->
+
         </div>
+
         <!-- /.container -->
+
     </nav>
 
     <!-- Page Content -->
 
-
     @RenderBody()
 
-    <div class="container">
-        <hr />
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-4">
-                    <h5><b>Site Haritası</b></h5>
-                    <hr />
-                    <p>
-                        <a href="/Home/About"><span class="glyphicon glyphicon-info-sign"></span> Hakkımızda</a><br />
-                        <a href="/Home/Begenilenler"><span class="glyphicon glyphicon-star"></span> Begenilenler</a><br />
-                        <a href=""><span class="glyphicon glyphicon-wrench"></span> Yönetim</a><br />
-                        <a href="/Home/Index"><span class="glyphicon glyphicon-list"></span> Son Yazılanlar</a>
-                    </p>
-                </div>
-                <div class="col-lg-4 text-center">
-                    <h5><b>Makale Web Projesi</b></h5>
-                    <hr />
-                    <p> @DateTime.Now.Year <br /> Tüm hakları saklıdır.. &copy;</p>
-                </div>
-                <div class="col-lg-4 text-center">
-                    <h5><b>E-Bülten Üyeliği</b></h5>
-                    <hr />
-                    <div class="col-md-12">
-                        <div class="input-group">
-                            <input type="text" class="form-control" placeholder="E-posta adresiniz:">
-                            <span class="input-group-btn">
-                                <button class="btn btn-primary" type="button">Gönder</button>
-                            </span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </footer>
-    </div>
+    <!--/.container-->
+
+    @RenderSection("footer", false)
+
+    <!--/.container-->
+
 </body>
 </html>
