--- a/Makale_Web/Views/Home/ProfilDegistir.cshtml
+++ b/Makale_Web/Views/Home/ProfilDegistir.cshtml
@@ -3,8 +3,6 @@
     ViewBag.Title = "ProfilDegistir";
 }
 
-<h2>ProfilDegistir</h2>
-
 <div class="container">
     <div class="row">
         <h2>Profiliniz</h2>
@@ -14,12 +12,22 @@
         @using (Html.BeginForm("ProfilDegistir", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
             <div class="col-md-3">
-                <img src="~/Images/@Model.ProfilResim" class="img-circle" width="100" height="100" />
+                <img src="~/Images/@Model.ProfilResim" class="img-circle" width="150" height="150" />
+                @Html.HiddenFor(model=>model.ProfilResim)
                 <br />
                 <input type="file" name="profilresmi" id="profilresmi" class="form-control" />
             </div>
             <div class="col-md-9">
-                @Html.ValidationSummary(false)
+                <div class="form-group">
+                    <div class="col-md-12">
+                        @Html.ValidationSummary(false)
+                    </div>
+                    <div class="col-md-12">
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    </div>
+                </div>
+                @Html.HiddenFor(model=>model.Id)
+
                 <div class="form-group">
                     @Html.LabelFor(model => model.Ad, new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
