--- a/Makale_Web/Views/Home/ProfilGoster.cshtml
+++ b/Makale_Web/Views/Home/ProfilGoster.cshtml
@@ -11,6 +11,8 @@
             <img src="~/Images/@Model.ProfilResim" class="img-circle" width="100" height="100" />
         </div>
         <div class="col-md-8">
+            @Html.ValidationSummary(false)
+            <br />
             <h3>@(Model.Ad+" "+Model.Soyad)</h3>
             <br />
             <h4><b>Kullanıcı Adı: </b>@(Model.KullaniciAdi)</h4>
@@ -24,8 +26,8 @@
                     <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                    <li><a href="/Home/ProfilDegistir">Degistir</a></li>
-                    <li><a href="/Home/ProfilSil">Sil</a></li>
+                    <li><a href="/Home/ProfilDegistir"><span class="glyphicon glyphicon-edit"></span>Degistir</a></li>
+                    <li><a href="/Home/ProfilSil" onclick="return confirm ('Hesabı silmek istediğinize emin misiniz?')"><span class="glyphicon glyphicon-trash"></span>Sil</a></li>
                 </ul>
             </div>
         </div>
