--- a/Makale_Web/Views/Kategori/Delete.cshtml
+++ b/Makale_Web/Views/Kategori/Delete.cshtml
@@ -4,61 +4,54 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<div class="row">
+    <div class="col-md-10 col-md-offset-1">
+        <h2>Kategori Sil</h2>
+        <hr />
+    </div>
+</div>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Kategori</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Baslik)
-        </dt>
+<div class="row">
+    <div class="col-md-10 col-md-offset-1">
+        <h3>Bu kategoriyi silmek istediğinizen emin misiniz?</h3>
+        <div>
+            <hr />
+            <h4>Kategori</h4>
+            <hr />
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Baslik)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Baslik)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Baslik)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Aciklama)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Aciklama)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Aciklama)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Aciklama)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.KayitTarihi)
-        </dt>
+            </dl>
 
-        <dd>
-            @Html.DisplayFor(model => model.KayitTarihi)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DegistirmeTarihi)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DegistirmeTarihi)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DegistirenKullanici)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DegistirenKullanici)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="btn btn-default" />
+            <a href="/Kategori/Index" class="btn btn-warning"><span class="glyphicon glyphicon-edit"></span>Listeye Dön</a>
+            @*@Html.ActionLink("Back to List", "Index")*@
         </div>
-    }
+            }
+        </div>
+    </div>
 </div>
+
+
+
+
+
