--- a/Makale_Web/Views/Kategori/Create.cshtml
+++ b/Makale_Web/Views/Kategori/Create.cshtml
@@ -36,8 +36,10 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Kaydet" class="btn btn-default" />
-                        <a href="/Kategori/Index" class="btn btn-warning"><span class="glyphicon glyphicon-edit"></span>Listeye Dön</a>
+                        @*<input type="submit" value="Kaydet" class="btn btn-success" />*@
+                        @BootstrapHelper.Button("submit","Kaydet","success","","floppy-disk")
+                        @BootstrapHelper.Linkbuton("/Kategori/Index","warning","","","Listeye Dön")
+                        @*<a href="/Kategori/Index" class="btn btn-warning"><span class="glyphicon glyphicon-edit"></span>Listeye Dön</a>*@
                     </div>
                 </div>
             </div>
