--- a/Makale_Web/Views/Kullanici/Create.cshtml
+++ b/Makale_Web/Views/Kullanici/Create.cshtml
@@ -18,12 +18,11 @@
     <div class="form-horizontal">
         <h4>Kullanici</h4>
         <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.ValidationSummary(false)
         <div class="form-group">
             @Html.LabelFor(model => model.Ad, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Ad, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Ad, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -31,7 +30,6 @@
             @Html.LabelFor(model => model.Soyad, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Soyad, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Soyad, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -39,7 +37,6 @@
             @Html.LabelFor(model => model.KullaniciAdi, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.KullaniciAdi, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.KullaniciAdi, "", new { @class = "text-danger" })
             </div>
         </div>
 
