--- a/Makale_Web/Views/Shared/_Layout.cshtml
+++ b/Makale_Web/Views/Shared/_Layout.cshtml
@@ -48,11 +48,11 @@
                         @*<a href=""><span class="glyphicon glyphicon-wrench"></span> Yönetim</a>*@
 
                         <li class="dropdown">
-                            <a href="/Not/Notlar" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-wrench"></span>Yönetim <span class="caret"></span></a>
+                            <a href="/Not/Index" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-wrench"></span>Yönetim <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="/Not/NotEkle">Not Ekle</a></li>
+                                <li><a href="/Not/Create">Not Ekle</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li><a href="/Not/Notlar">Notlarım</a></li>
+                                <li><a href="/Not/Index">Notlarım</a></li>
                                 <li><a href="/Not/Beğendiklerim">Beğendiklerim</a></li>
                                 @if (kullanici.Admin)
                                 {
