--- a/Makale_Web/Views/Kategori/Create.cshtml
+++ b/Makale_Web/Views/Kategori/Create.cshtml
@@ -6,7 +6,7 @@
 
 <div class="row">
     <div class="col-md-10 col-md-offset-1">
-        <h2>Kategori Değiştir</h2>
+        <h2>Kategori Ekle</h2>
         <hr />
     </div>
 </div>
