--- a/Makale_Web/Views/Not/Delete.cshtml
+++ b/Makale_Web/Views/Not/Delete.cshtml
@@ -4,85 +4,97 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<div class="row">
+    <div class="col-md-10 col-md-offset-1">
+        <h2>Makale Sil</h2>
+        <hr />
+    </div>
+</div>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Not</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Kategori.Baslik)
-        </dt>
+<div class="row">
+    <div class="col-md-10 col-md-offset-1">
+        <h3>Bu makaleyi silmek istediğinize emin misiniz?</h3>
+        <div>
+            <hr />
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Kategori.Baslik)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Kategori.Baslik)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Kategori.Baslik)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Baslik)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Baslik)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Baslik)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Baslik)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Text)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Text)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Text)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Text)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Taslak)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Taslak)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Taslak)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Taslak)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.BegeniSayisi)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.BegeniSayisi)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.BegeniSayisi)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.BegeniSayisi)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.KayitTarihi)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.KayitTarihi)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.KayitTarihi)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.KayitTarihi)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.DegistirmeTarihi)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.DegistirmeTarihi)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.DegistirmeTarihi)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.DegistirmeTarihi)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.DegistirenKullanici)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.DegistirenKullanici)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.DegistirenKullanici)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.DegistirenKullanici)
+                </dd>
 
-    </dl>
+            </dl>
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
             @Html.ActionLink("Back to List", "Index")
+
+            @*@BootstrapHelper.Button("submit", "sil", "danger", "", "trash")
+            @BootstrapHelper.Button("submit", "sil", "danger", "", "trash")*@
         </div>
-    }
+            }
+        </div>
+        </div>
 </div>
