--- a/Makale_Web/Views/Shared/_Layout.cshtml
+++ b/Makale_Web/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
                                 {
                                     <li role="separator" class="divider"></li>
                                     <li><a href="/Kategori/Create">Kategori Ekle</a></li>
-                                    <li><a href="/Kategori/Kategoriler">Kategoriler</a></li>
+                                    <li><a href="/Kategori/Index">Kategoriler</a></li>
                                     <li role="separator" class="divider"></li>
                                     <li><a href="/Kullanici/Create">Kullanıcı Ekle</a></li>
                                     <li><a href="/Kullanici/Index">Kullanıcılar</a></li>
