--- a/Makale_Web/Views/Home/Index.cshtml
+++ b/Makale_Web/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     <div class="row">
 
         <div class="col-md-3">
-            
+
             @Html.Partial("_PartialPageKategoriler")
         </div>
         <div class="col-md-9">
@@ -23,15 +23,15 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="item active">
-                                <img class="slide-image" src="~/Images/a5eebe0fbab64f2a0f517bfc58bd1f93.jpg" alt="">
+                                <img class="slide-image" src="~/Images/manzara.jpg" alt="">
                             </div>
                             <div class="item">
 
-                                <img class="slide-image" src="~/Images/7f5f72b43cfbaa8fc0ce70d228c685ed.jpg" alt="">
+                                <img class="slide-image" src="~/Images/yol.jpg" alt="">
                             </div>
 
                             <div class="item">
-                                <img class="slide-image" src="~/Images/c0fc6718137400881ab8a02c538cb65e.jpg" alt="">
+                                <img class="slide-image" src="~/Images/sunset.jpg" alt="">
                             </div>""
 
                             <div class="item">
@@ -92,20 +92,92 @@
 @section footer{
     @Html.Partial("_PartialPageFooter")
 
-    }
-@BootstrapHelper.ModalPoppup("modal1","Yorumlar")
+}
+@BootstrapHelper.ModalPoppup("modal1", "Yorumlar")
 
 <script>
+    var notid = -1;
     $(function () {
         $('#modal1').on('show.bs.modal', function (e) {
             var button = $(e.relatedTarget);
-            var notid = button.data("notid");
+            notid = button.data("notid");
             $('#modal1_body').load("/Yorum/YorumGoster/" + notid);
         });
     });
 
-    function yorumupdate(mod, yorumid, yorumtext)
-    {
+    function yorumislem(btn, islem, yorumid, yorumtext) {
+        var button = $(btn);
+        var editmod = button.data("edit");
+        if (islem === "update") {
+            if (!editmod) {
+                button.data("edit", true);
+                button.removeClass("btn-warning");
+                button.addClass("btn-success");
+                var span = button.find("span");
+                span.removeClass("glyphicon-edit");
+                span.addClass("glyphicon-ok");
 
+                $(yorumtext).attr("contenteditable", true);
+                $(yorumtext).focus();
+            }
+            else {
+                button.data("edit", false);
+                button.addClass("btn-seuccess");
+                button.removeClass("btn-warning");
+                var span = button.find("span");
+                span.removeClass("glyphicon-ok");
+                span.addClass("glyphicon-edit");
+
+                $(yorumtext).attr("contenteditable", false);
+                var txt = $(yorumtext).text();
+                $.ajax({
+                    method: "POST",
+                    url: "/Yorum/Edit/" + yorumid,
+                    data: { text: yenitext }
+                }).done(function (data) {
+                    if (data.sonuc)
+                        //yorumlar yeniden yüklenir.
+                        $('#modal1_body').load("/Yorum/YorumGoster/" + notid);
+                    else
+                        alert("Yorum güncellenemedi.");
+                }).fail(function () {
+                    alert("Sunucu ile bağlantı kurulamadı.");
+                })
+            }
+        }
+        else if (islem == "delete") {
+            var mesaj = confirm("Yorum silinsin mi?");
+            if (!mesaj)
+                return false;
+            $.ajax({
+                method: "GET",
+                url: "/Yorum/Delete/" + yorumid
+            }).done(function (data) {
+                if (data.sonuc)
+                    //yorumlar yeniden yüklenir.
+                    $('#modal1_body').load("/Yorum/YorumGoster/" + notid);
+                else
+                    alert("Yorum silinemedi.");
+            }).fail(function () {
+                alert("Sunucu ile bağlantı kurulamadı.");
+            });
+        }
+        else if (islem == "create")
+        {
+            var yorum = $("#yorum_text").val();
+            $.ajax({
+                method: "Post",
+                url: "/Yorum/Create",
+                data: { Text: yorum, notid: notid }
+            }).done(function (data) {
+                if (data.sonuc)
+                    //yorumlar yükleniyor
+                    $('#modal1_body').load("/Yorum/YorumGoster" + notid);
+                else
+                    alert("Yorum eklenemedi.");
+            }).fail(function () {
+                alert("Sunucu ile bağlantı kurulamadı.");
+            });
+        }
     }
 </script>
