--- a/Makale_Web/Views/Home/Index.cshtml
+++ b/Makale_Web/Views/Home/Index.cshtml
@@ -51,7 +51,8 @@
 
                 @foreach (var item in Model)
                 {
-                    <div class="col-sm-4 col-lg-4 col-md-4">
+
+                    <div class="col-sm-4 col-lg-4 col-md-4" data-notid="@item.Id">
                         <div class="thumbnail">
 
                             <img src="~/Images/a5eebe0fbab64f2a0f517bfc58bd1f93.jpg" alt="">
@@ -78,7 +79,9 @@
                                     <button class="btn btn-default btn-xs" data-toggle="modal" data-target="#modal1" data-notid="@item.Id"><span class="glyphicon glyphicon-comment"></span>  Yorumlar</button>
                                 </p>
                                 <p>
-                                    <button class="btn btn-default btn-xs"> <span class="glyphicon glyphicon-heart text-danger"></span>@item.BegeniSayisi</button>
+                                    <button class="btn btn-default btn-xs text-danger" data-notid="@item.Id" data-like="false">
+                                        <span class="glyphicon glyphicon-heart-empty text-danger like-kalp"></span><span class="begenisayisi">@item.BegeniSayisi</span>
+                                    </button>
                                 </p>
                             </div>
                         </div>
@@ -95,89 +98,6 @@
 }
 @BootstrapHelper.ModalPoppup("modal1", "Yorumlar")
 
-<script>
-    var notid = -1;
-    $(function () {
-        $('#modal1').on('show.bs.modal', function (e) {
-            var button = $(e.relatedTarget);
-            notid = button.data("notid");
-            $('#modal1_body').load("/Yorum/YorumGoster/" + notid);
-        });
-    });
 
-    function yorumislem(btn, islem, yorumid, yorumtext) {
-        var button = $(btn);
-        var editmod = button.data("edit");
-        if (islem === "update") {
-            if (!editmod) {
-                button.data("edit", true);
-                button.removeClass("btn-warning");
-                button.addClass("btn-success");
-                var span = button.find("span");
-                span.removeClass("glyphicon-edit");
-                span.addClass("glyphicon-ok");
-
-                $(yorumtext).attr("contenteditable", true);
-                $(yorumtext).focus();
-            }
-            else {
-                button.data("edit", false);
-                button.addClass("btn-seuccess");
-                button.removeClass("btn-warning");
-                var span = button.find("span");
-                span.removeClass("glyphicon-ok");
-                span.addClass("glyphicon-edit");
-
-                $(yorumtext).attr("contenteditable", false);
-                var txt = $(yorumtext).text();
-                $.ajax({
-                    method: "POST",
-                    url: "/Yorum/Edit/" + yorumid,
-                    data: { text: yenitext }
-                }).done(function (data) {
-                    if (data.sonuc)
-                        //yorumlar yeniden yüklenir.
-                        $('#modal1_body').load("/Yorum/YorumGoster/" + notid);
-                    else
-                        alert("Yorum güncellenemedi.");
-                }).fail(function () {
-                    alert("Sunucu ile bağlantı kurulamadı.");
-                })
-            }
-        }
-        else if (islem == "delete") {
-            var mesaj = confirm("Yorum silinsin mi?");
-            if (!mesaj)
-                return false;
-            $.ajax({
-                method: "GET",
-                url: "/Yorum/Delete/" + yorumid
-            }).done(function (data) {
-                if (data.sonuc)
-                    //yorumlar yeniden yüklenir.
-                    $('#modal1_body').load("/Yorum/YorumGoster/" + notid);
-                else
-                    alert("Yorum silinemedi.");
-            }).fail(function () {
-                alert("Sunucu ile bağlantı kurulamadı.");
-            });
-        }
-        else if (islem == "create")
-        {
-            var yorum = $("#yorum_text").val();
-            $.ajax({
-                method: "Post",
-                url: "/Yorum/Create",
-                data: { Text: yorum, notid: notid }
-            }).done(function (data) {
-                if (data.sonuc)
-                    //yorumlar yükleniyor
-                    $('#modal1_body').load("/Yorum/YorumGoster" + notid);
-                else
-                    alert("Yorum eklenemedi.");
-            }).fail(function () {
-                alert("Sunucu ile bağlantı kurulamadı.");
-            });
-        }
-    }
-</script>
+<script src="~/Scripts/JavaScriptFile.js"></script>
+<script src="~/Scripts/ScriptLike.js"></script>
